# trep

./: .clang-format  .gitignore  CMakeLists.txt  README.md  main.cxx
src/: colors.hxx  main.cxx  parser.cxx  parser.hxx  searcher.cxx  searcher.hxx
